# md2pdf

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
assets/: theme.typ
docs/: architecture.md  decisions.md
src/: cli.rs  compile.rs  convert.rs  document.rs  files.rs  frontmatter.rs  icons.rs  main.rs  markdown.rs  report.rs  theme.rs  tmtheme.rs
src/document/: compile.rs  mod.rs
src/markdown/: frontmatter.rs  images.rs  inline.rs  literal.rs  mod.rs  preprocess.rs  properties.rs  renderer.rs
src/theme/: color.rs  icons.rs  mod.rs  tmtheme.rs
src/tui/: app.rs  logo.rs  mod.rs  notes.rs  preview.rs  ui.rs
tests/: Another Note.md  test.md
