[package]
name = "md2pdf"
version = "0.1.0"
edition = "2024"
authors = ["ecstra <themythbustertmb@gmail.com>"]
license = "MIT"
description = "Turns an Obsidian note into a themed PDF, typeset with Typst"

[dependencies]
anstream = "1.0"
anstyle = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.13.4"
ratatui = "0.30"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tex2typst-rs = "0.4.1"
# Pinned to the exact copy inside typst-library, which does the real
# highlighting. A newer syntax set here would resolve languages that the
# compiled document then renders as plain text.
two-face = { version = "=0.4.5", default-features = false, features = ["syntect-fancy"] }
# Already beneath typst-as-lib. Named directly for the Font and Bytes types,
# so the embedded faces parse once instead of on every compile.
typst = "0.15.0"
typst-as-lib = "0.16.0"
typst-pdf = "0.15.0"
urlencoding = "2.1"
